Updated layout issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,11 +28,16 @@ h1 {
   font-size: 6rem;
   margin-top: 5rem;
   padding-top: 1rem;
+  text-align: center;
 }
 
 h2 {
   font-size: 4.5rem;
   margin-bottom: 0;
+}
+
+h2:nth-of-type(1) {
+  margin-top: 0;
 }
 
 h2:last-of-type {
@@ -41,6 +46,10 @@ h2:last-of-type {
 
 .body__p {
   margin-top: 1rem;
+}
+
+#quote {
+  text-align: center;
 }
 
 @media screen and (min-width: 1024px) {
@@ -109,21 +118,15 @@ a {
   }
 }
 
-/* Grids */
-.grid {
-  display: grid;
-}
-
-@media screen and (min-width: 768px) {
-  .grid--1x2 {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
 /* Blocks */
 .block {
+  margin-top: 1rem;
   margin-bottom: 0;
   padding: 1rem;
+}
+
+#home {
+  margin-top: 4rem;
 }
 
 /* Navigation Bar */
@@ -156,15 +159,18 @@ a {
 }
 
 /* Hero */
-.grid__hero {
+.hero {
   height: 100vh;
-  justify-items: center;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  border-bottom: 3px solid var(--color-primary);
+  margin-top: 3rem;
 }
 
 .hero__content-left {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -177,7 +183,16 @@ img {
   margin-top: 0;
 }
 
+#hero__item2 {
+  margin-bottom: 2rem;
+}
+
 @media screen and (min-width: 1024px) {
+  .hero {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+  }
   img {
     height: 500px;
   }
